Fixing layout issue #1

--- a/frontend/src/Pages/User/Order/Order.css
+++ b/frontend/src/Pages/User/Order/Order.css
@@ -222,12 +222,12 @@ body {
   font-size: 17px;
 }
 
-@media (max-width: 376px) {
+@media (max-width: 415px) {
   .order-container {
-    padding: 2px;
+    padding: 0px;
   }
   .greet-message h3 {
-    font-size: 12px;
+    font-size: 14px;
   }
   .greet-message p {
     font-size: 12px;
@@ -393,12 +393,183 @@ body {
   }
 }
 
-@media (max-width: 415px) {
+@media (max-width: 396px) {
   .order-container {
-    padding: 0px;
+    padding: 10px;
   }
   .greet-message h3 {
-    font-size: 14px;
+    font-size: 24px;
+  }
+  .greet-message p {
+    font-size: 12px;
+  }
+
+  .search-bar-div-order img {
+    position: relative;
+    left: 37px;
+    top: 9px;
+    width: 14px;
+    height: 14px;
+  }
+  .search-bar-div-order input {
+    width: 368px;
+    height: 30px;
+    padding: 10px 49px;
+    border-radius: 8px;
+    border: none;
+    background-color: #f0f5f3;
+    font-family: "Roboto", sans-serif;
+    font-weight: 200;
+    font-size: 12px;
+    outline: none;
+  }
+  .search-bar-div-order {
+    display: flex;
+    width: 100%;
+    margin-top: 10px;
+    margin-left: -15px;
+  }
+
+  .order-menu {
+    display: flex;
+    margin-top: 15px;
+    margin-left: 10px;
+    gap: 14px;
+    margin-bottom: -10px;
+  }
+
+  .order-item {
+    width: 60px;
+    height: 48px;
+    border: 1px solid #616161;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    gap: 5px;
+  }
+
+  .order-img {
+    width: 24px;
+  }
+
+  .drink-img {
+    width: 16px;
+  }
+  .order-item p {
+    font-family: "Roboto", sans-serif;
+    font-size: 8px;
+  }
+  .order-category-items h2 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 27px;
+    margin-top: 30px;
+    margin-left: 10px;
+    margin-bottom: -10px;
+  }
+
+  .indi-item-div {
+    border-radius: 10px;
+    width: 164px;
+    height: 124px;
+  }
+  .item-image {
+    width: 164px;
+    height: 74px;
+    /* border: 1px solid grey; */
+  }
+
+  .name-price {
+    width: 164px;
+    height: 70px;
+    background-color: #d9d9d9;
+    position: relative;
+    top: -6px;
+    padding: 3px;
+  }
+
+  .name-price p {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 11px;
+    color: #232323;
+    margin-top: 2px;
+    margin-left: 7px;
+  }
+
+  .quantity-div h3 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 11px;
+    color: #272727;
+    /* margin-top: -4px; */
+  }
+
+  .add-quan-plus {
+    width: 174px;
+    height: 84px;
+    /* border: 1px solid grey; */
+  }
+  .all-items {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 30px;
+    margin-left: 15px;
+    row-gap: 17px;
+    column-gap: 7px;
+  }
+
+  .quantity {
+    display: flex;
+    width: 81px;
+    height: 20px;
+    gap: 8px;
+    align-items: center;
+    margin-right: -20px;
+  }
+
+  .decrease-quan-btn {
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
+    border: 1px solid grey;
+    font-size: 17px;
+  }
+  .increase-quan-btn {
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
+    border: 1px solid grey;
+    font-size: 17px;
+  }
+
+  .order-next-btn {
+    display: inline-block;
+    width: 132px;
+    height: 39px;
+    border-radius: 15px;
+    background-color: #505050;
+    font-family: "Inter", sans-serif;
+    font-size: 13px;
+    font-weight: bold;
+    color: #fefefe;
+    border: none;
+    margin-top: 20px;
+    margin-left: 225px;
+    text-align: center;
+    text-decoration: none;
+    padding-top: 10px;
+  }
+}
+
+@media (max-width: 376px) {
+  .order-container {
+    padding: 2px;
+  }
+  .greet-message h3 {
+    font-size: 12px;
   }
   .greet-message p {
     font-size: 12px;
